--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,13 +1,26 @@
 /* Contacts */
 
 .contacts {
-    background: linear-gradient(60deg, rgba(255, 43, 74, 0.5) 0%, rgba(7, 27, 53, 0.9) 25%, rgba(7, 27, 53, 0.9) 75%, rgba(163, 38, 57, 0.5) 100%),
-        url('../img/contact.jpg') no-repeat;
+    background: 
+        linear-gradient(
+            60deg, 
+            rgba(255, 43, 74, 0.5) 0%, 
+            rgba(7, 27, 53, 0.9) 25%, 
+            rgba(7, 27, 53, 0.9) 75%, 
+            rgba(163, 38, 57, 0.5) 100%
+        ),
+        url('./img/contact.jpg') no-repeat;
     background-size: cover;
 }
 
 .contacts__form {
-    background-image: linear-gradient(45deg, rgba(89, 63, 90, 0.3) 0%, rgba(104, 61, 124, 0.2) 50%, rgba(93, 72, 94, 0.3) 100%);
+    background-image: 
+        linear-gradient(
+            45deg, 
+            rgba(89, 63, 90, 0.3) 0%, 
+            rgba(104, 61, 124, 0.2) 50%, 
+            rgba(93, 72, 94, 0.3) 100%
+        );
     color: #fff;
     padding: 40px 46px 70px 46px;
     padding-bottom: 98px;
