--- a/css/experience.css
+++ b/css/experience.css
@@ -8,7 +8,7 @@
             rgba(7, 27, 53, 0.9) 75%, 
             rgba(163, 38, 57, 0.5) 100%
         ),
-        url('./img/city.jpg') no-repeat;
+        url('/img/city.jpg') no-repeat;
     background-size: cover;
 }
 
