--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,7 @@
             rgba(53, 139, 196, 0.5) 80%, 
             rgba(163, 38, 57, 0.5) 100%
             ),
-        url('/img/header-bg.jpg') no-repeat;
+        url('../img/header-bg.jpg') no-repeat;
     background-size: cover;
     padding-top: 70px;
 }
