--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,10 @@
   outline: 1px solid red;
 }
 
+html {
+  font-size: 10px;
+}
+
 /* All buttons */
 .btn {
     display: inline-block;
@@ -29,6 +33,20 @@
 
 .section {
   margin-bottom: 120px;
+}
+
+.section__title {
+  font-size: 40px;
+  text-align: center;
+  letter-spacing: 0.4px;
+}
+
+.section__description {
+  margin-bottom: 60px;
+  font-size: 16px;
+  text-align: center;
+  opacity: 0.7;
+  letter-spacing: 0.16px;
 }
 
 
