--- a/css/experience.css
+++ b/css/experience.css
@@ -13,7 +13,6 @@
 }
 
 .experience__category {
-    /* background: rgba(0, 0, 0, 0.5); */
     background-image: 
         linear-gradient(
             45deg, 
@@ -33,11 +32,10 @@
     margin: 120px 0 120px -10px;
 }
 
-
 .experience__title {
+    margin-bottom: 35px;
     font-size: 26px;
     text-transform: uppercase;
-    padding-bottom: 35px;
 }
 
 .experience__place {
@@ -55,7 +53,7 @@
     font-size: 16px;
 }
 
-.experience__category hr {
+.experience__line {
     border-top: 2px solid rgba(255, 255, 255, 0.3);
 }
 
