--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,10 @@ html {
   font-size: 10px;
 }
 
+/* * {
+  outline: 1px solid rgb(164, 240, 24);
+} */
+
 /* All buttons */
 .btn {
     display: inline-block;
@@ -16,8 +20,9 @@ html {
 }
 
 .btn:hover {
-  background-color: #b61f35;
+  background-color: #c0253a;
 }
+
 
 .btn:hover,
 .btn:active,
@@ -44,5 +49,4 @@ html {
   opacity: 0.7;
   letter-spacing: 0.16px;
 }
-
 
