--- a/css/footer.css
+++ b/css/footer.css
@@ -6,30 +6,30 @@
 
 .footer__data {
     text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.footer__socials a {
-    border-right: 1px solid #aaa;
-    margin-right: 10px;
-    padding-right: 15px;
+.footer__socials {
+    margin-bottom: 10px;
+}
+
+.footer__social {
+    /* border-right: 1px solid #aaa; */
+    display: inline-block;
     color: #aaaaaa;
-
+    padding: 10px;
+    /* padding: 10px; */
 }
 
-.footer__socials a:last-child {
-    border-right: none;
-}
-
-.footer__socials a:hover {
+.footer__social:hover {
     color: #ff2b4a;
 }
 
 .footer__text {
     color: rgba(255, 255, 255, 0.5);
     font-size: 12px;
-    margin-top: 15px;
+    
 }
 
 /* .Footer */
