--- a/css/contacts.css
+++ b/css/contacts.css
@@ -14,41 +14,25 @@
 }
 
 .contacts__form {
-    background-image: 
-        linear-gradient(
-            45deg, 
-            rgba(89, 63, 90, 0.3) 0%, 
-            rgba(104, 61, 124, 0.2) 50%, 
-            rgba(93, 72, 94, 0.3) 100%
-        );
-    color: #fff;
-    padding: 40px 46px 70px 46px;
-    padding-bottom: 98px;
-}
-
-.contacts__left {
-    margin: 120px -3px 120px 0;
-}
-
-.contacts__right {
-    margin: 0 0 20px -10px;
-    padding: 36px 46px 1px 46px;
-}
-
-.contacts__right:first-child {
-    margin-top: 120px;
+    margin: 40px 0;
 }
 
 .contacts__title {
     font-size: 26px;
-    font-size: 26px;
     text-transform: uppercase;
-    padding-bottom: 35px;
 }
 
-.contacts__right .contacts__title {
-    padding-bottom: 15px;
-    margin-bottom: 0;
+.contacts__item {
+    background-image: 
+    linear-gradient(
+        45deg, 
+        rgba(89, 63, 90, 0.3) 0%, 
+        rgba(104, 61, 124, 0.2) 50%, 
+        rgba(93, 72, 94, 0.3) 100%
+    );
+    color: #fff;
+    padding: 20px 20px 20px 20px;
+    margin: 23px 0;
 }
 
 .contacts__input,
@@ -56,24 +40,22 @@
     width: 100%;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.6);
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     padding: 20px;
     background: none;
 }
 
 .contacts__textarea {
     height: 200px;
-    margin-bottom: 40px;
 }
 
 .contacts__text {
     opacity: 0.7;
-    color: #ffffff;
+    color: #fff;
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
     letter-spacing: 0.16px;
-    padding-bottom: 30px;
 }
 
 :active, :hover, :focus {
@@ -89,7 +71,6 @@
 .contacts__link:hover,
 .contacts__link:visited {
     color: white;
-
 }
 
 
